--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,92 @@
+$navbar-default-bg: #CAF2FC;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo
+{
+    float: left;
+    font-size: 1.7em;
+    color: #293133;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+#logo:hover
+{
+    color: #fff;
+    text-decoration: none;
+}
+
+.center
+{
+    text-align: center;
+}
+
+.jumbotron
+{
+    background-image: asset-url("G0031586.JPG");
+    background-size: cover;
+    height: 550px;
+}
+
+.jumbotron h1
+{
+    
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: -1px;
+    font-weight: bold;
+    color: #293133;
+}
+
+.btn-xlarge
+{
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    border: 2px solid #293133;
+    font-size: 1.7em;
+    color: #293133;
+    /*outline-color: #293133;
+    outline-style: solid;*/
+}
+
+.btn-xlarge:hover
+{
+    background-color: #293133;
+    color: white;
+    
+}
+
+footer
+{
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+    
+}
+
+footer a:hover
+{
+    color: #222;
+}
+
+footer small
+{
+    float: left;
+}
+
+footer ul
+{
+    float: right;
+    list-style: none;
+}
+
+footer ul list{
+    float: left;
+    margin-left: 15px;
+}
+
+
