--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <%= render "layouts/navigation" %>
   <%= render "layouts/messages" %>
+  
+  <div class="container">
 
   <%= yield %>
+  
+  </div>
+  
+  <%= render "layouts/footer" %>
 
 </body>
 </html>
