--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,6 +59,17 @@ $navbar-default-bg: #CAF2FC;
     
 }
 
+.article-actions
+{
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
+.description
+{
+    margin-top: 0;
+}
+
 footer
 {
     margin-top: 45px;
