--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,7 @@
                 <%= link_to article.title, article_path(article) %>
             </div>
             <div class="article-body">
-                <%= truncate(article.description, length: 100) %>
+                <%= truncate(article.description, radius: 10) %>
             </div>
             <div class="article-actions">
                 <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
