--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,14 @@
 <h2 align="center">Title: <%= @article.title %></h2>
+
+
 <div class="well col-xs-8 col-xs-offset-2">
     <h4 class="center description"><strong>Description:</strong></h4>
-    <hr>
-    <%= simple_format(@article.description) %>
+    <div class="dont-break-out"> 
+    
+
+    <%= breaking_word_wrap(@article.description, 150) %>
+    </div>
+
     <div class="article-actions">
         <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
         
