--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,8 @@
     <div class="col-xs-8 col-xs-offset-2">
         <div class="well well-lg">
             <div class="article-title">
-                <%= link_to article.title, article_path(article) %>
+                <%= link_to truncate(article.title, radius: 10), article_path(article) %>
+             
             </div>
             <div class="article-body">
                 <%= truncate(article.description, radius: 10) %>
