--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,11 +15,11 @@
         </div>
             
         <div class="form-group">
+            <% simple_format(@article.description) %>
             <div class="control-label col-sm-2">
                 <%= f.label :description %>
             </div>
             <div class="col-sm-8">
-                <%= simple_format(@article.description) %>
                 <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
             </div>
         </div>
