--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
   </div>
   
   <%= render "layouts/footer" %>
+  <%# The debug param will show page info during development %>
+  <%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
