--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,10 +59,24 @@ $navbar-default-bg: #CAF2FC;
     
 }
 
+.well
+{
+    background-color: #eaeaea;
+    border-color: #293133;
+}
+
+.article-meta-details
+{
+    border-top: 1px solid #293133;
+    margin-top: 15px;
+    margin-bottom: -15px;
+}
+
 .article-actions
 {
     border-top: 1px solid #eaeaea;
-    padding-top: 5px;
+    padding-top: 2px;
+    background-color: #eaeaea;
 }
 
 .description
@@ -81,6 +95,7 @@ $navbar-default-bg: #CAF2FC;
     border-top: 1px solid #eaeaea;
     padding-top: 15px;
     padding-bottom: 15px;
+    background-color: #eaeaea;
 }
 
 .dont-break-out {
