--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,13 +6,20 @@
     <div class="col-xs-8 col-xs-offset-2">
         <div class="well well-lg">
             <div class="article-title">
-                <%= link_to truncate(article.title, radius: 10), article_path(article) %>
+                
+               <%= truncate(article.title, radius: 10) %>
              
             </div>
             <div class="article-body">
                 <%= truncate(article.description, radius: 10) %>
+                <div class="article-meta-details">
+                    <small>Created by: <%= article.user.username if article.user %>
+                            <%= time_ago_in_words(article.created_at) %>
+                            last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
+                </div>
             </div>
             <div class="article-actions">
+                <%= link_to "View this article", article_path(article), class: "btn btn-xs btn-success" %>
                 <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
             
                 <%= link_to "Delete this article", article_path(article), method: :delete, 
