add users listing and update show article view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -98,6 +98,12 @@ $navbar-default-bg: #CAF2FC;
     background-color: #eaeaea;
 }
 
+.listing
+{
+    list-style: none;
+    padding-left: 0;
+}
+
 .dont-break-out {
 
   /* These are technically the same, but use both */
