--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -17,11 +17,12 @@
             </div>
             <div class="article-actions">
                 <%= link_to "View this article", article_path(article), class: "btn btn-xs btn-success" %>
-                <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-            
-                <%= link_to "Delete this article", article_path(article), method: :delete, 
-                                                    data: {confirm: "Are you sure you want to delete this article?"}, 
-                                                    class: "btn btn-xs btn-danger" %>
+                <% if logged_in? && current_user == article.user %>
+                    <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+                    <%= link_to "Delete this article", article_path(article), method: :delete, 
+                                                        data: {confirm: "Are you sure you want to delete this article?"}, 
+                                                        class: "btn btn-xs btn-danger" %>
+                <% end %>
             </div>
         </div>
     </div>
