--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -11,7 +11,7 @@
                 <%= truncate(article.description, radius: 10) %>
                 <div class="article-meta-details">
                     <small>Created by: <%= article.user.username if article.user %>
-                            <%= time_ago_in_words(article.created_at) %>
+                            <%= time_ago_in_words(article.created_at) %><br>
                             last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
                 </div>
             </div>
