--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
                 <div class="article-meta-details">
                     <small>Created by: <%= article.user.username if article.user %>
                             <%= time_ago_in_words(article.created_at) %><br>
-                            last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
+                            Last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
                 </div>
             </div>
             <div class="article-actions">
