--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   
   <%= render "layouts/footer" %>
   <%# The debug param will show page info during development %>
-  <%= debug(params) if Rails.env.development? %>
+  <%# <%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
