Updated all views with categories

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,19 @@ $navbar-default-bg: #CAF2FC;
     padding-left: 0;
 }
 
+.badge
+{
+    background-color: #CEF6F5;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+.input_checkbox input
+{
+    width: auto !important;
+}
+
 .dont-break-out {
 
   /* These are technically the same, but use both */
