--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,6 +15,11 @@
                             Last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
                 </div>
             </div>
+            
+            <% if article.categories.any? %>
+                <p>Categories: <%= render article.categories%></p>
+            <% end %>
+            
             <div class="article-actions">
                 <%= link_to "View this article", article_path(article), class: "btn btn-xs btn-success" %>
                 <% if logged_in? && (current_user == article.user || current_user.admin?) %>
